--- a/Li_DL/HW_1/HW_1.ipynb
+++ b/Li_DL/HW_1/HW_1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>日期</th>\n      <th>測站</th>\n      <th>測項</th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n      <th>5</th>\n      <th>6</th>\n      <th>...</th>\n      <th>14</th>\n      <th>15</th>\n      <th>16</th>\n      <th>17</th>\n      <th>18</th>\n      <th>19</th>\n      <th>20</th>\n      <th>21</th>\n      <th>22</th>\n      <th>23</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>AMB_TEMP</td>\n      <td>14</td>\n      <td>14</td>\n      <td>14</td>\n      <td>13</td>\n      <td>12</td>\n      <td>12</td>\n      <td>12</td>\n      <td>...</td>\n      <td>22</td>\n      <td>22</td>\n      <td>21</td>\n      <td>19</td>\n      <td>17</td>\n      <td>16</td>\n      <td>15</td>\n      <td>15</td>\n      <td>15</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>CH4</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>...</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>1.8</td>\n      <td>1.8</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>CO</td>\n      <td>0.51</td>\n      <td>0.41</td>\n      <td>0.39</td>\n      <td>0.37</td>\n      <td>0.35</td>\n      <td>0.3</td>\n      <td>0.37</td>\n      <td>...</td>\n      <td>0.37</td>\n      <td>0.37</td>\n      <td>0.47</td>\n      <td>0.69</td>\n      <td>0.56</td>\n      <td>0.45</td>\n      <td>0.38</td>\n      <td>0.35</td>\n      <td>0.36</td>\n      <td>0.32</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>NMHC</td>\n      <td>0.2</td>\n      <td>0.15</td>\n      <td>0.13</td>\n      <td>0.12</td>\n      <td>0.11</td>\n      <td>0.06</td>\n      <td>0.1</td>\n      <td>...</td>\n      <td>0.1</td>\n      <td>0.13</td>\n      <td>0.14</td>\n      <td>0.23</td>\n      <td>0.18</td>\n      <td>0.12</td>\n      <td>0.1</td>\n      <td>0.09</td>\n      <td>0.1</td>\n      <td>0.08</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>NO</td>\n      <td>0.9</td>\n      <td>0.6</td>\n      <td>0.5</td>\n      <td>1.7</td>\n      <td>1.8</td>\n      <td>1.5</td>\n      <td>1.9</td>\n      <td>...</td>\n      <td>2.5</td>\n      <td>2.2</td>\n      <td>2.5</td>\n      <td>2.3</td>\n      <td>2.1</td>\n      <td>1.9</td>\n      <td>1.5</td>\n      <td>1.6</td>\n      <td>1.8</td>\n      <td>1.5</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>NO2</td>\n      <td>16</td>\n      <td>9.2</td>\n      <td>8.2</td>\n      <td>6.9</td>\n      <td>6.8</td>\n      <td>3.8</td>\n      <td>6.9</td>\n      <td>...</td>\n      <td>11</td>\n      <td>11</td>\n      <td>22</td>\n      <td>28</td>\n      <td>19</td>\n      <td>12</td>\n      <td>8.1</td>\n      <td>7</td>\n      <td>6.9</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>NOx</td>\n      <td>17</td>\n      <td>9.8</td>\n      <td>8.7</td>\n      <td>8.6</td>\n      <td>8.5</td>\n      <td>5.3</td>\n      <td>8.8</td>\n      <td>...</td>\n      <td>14</td>\n      <td>13</td>\n      <td>25</td>\n      <td>30</td>\n      <td>21</td>\n      <td>13</td>\n      <td>9.7</td>\n      <td>8.6</td>\n      <td>8.7</td>\n      <td>7.5</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>O3</td>\n      <td>16</td>\n      <td>30</td>\n      <td>27</td>\n      <td>23</td>\n      <td>24</td>\n      <td>28</td>\n      <td>24</td>\n      <td>...</td>\n      <td>65</td>\n      <td>64</td>\n      <td>51</td>\n      <td>34</td>\n      <td>33</td>\n      <td>34</td>\n      <td>37</td>\n      <td>38</td>\n      <td>38</td>\n      <td>36</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>PM10</td>\n      <td>56</td>\n      <td>50</td>\n      <td>48</td>\n      <td>35</td>\n      <td>25</td>\n      <td>12</td>\n      <td>4</td>\n      <td>...</td>\n      <td>52</td>\n      <td>51</td>\n      <td>66</td>\n      <td>85</td>\n      <td>85</td>\n      <td>63</td>\n      <td>46</td>\n      <td>36</td>\n      <td>42</td>\n      <td>42</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>PM2.5</td>\n      <td>26</td>\n      <td>39</td>\n      <td>36</td>\n      <td>35</td>\n      <td>31</td>\n      <td>28</td>\n      <td>25</td>\n      <td>...</td>\n      <td>36</td>\n      <td>45</td>\n      <td>42</td>\n      <td>49</td>\n      <td>45</td>\n      <td>44</td>\n      <td>41</td>\n      <td>30</td>\n      <td>24</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>RAINFALL</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>...</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>NR</td>\n      <td>NR</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>RH</td>\n      <td>77</td>\n      <td>68</td>\n      <td>67</td>\n      <td>74</td>\n      <td>72</td>\n      <td>73</td>\n      <td>74</td>\n      <td>...</td>\n      <td>47</td>\n      <td>49</td>\n      <td>56</td>\n      <td>67</td>\n      <td>72</td>\n      <td>69</td>\n      <td>70</td>\n      <td>70</td>\n      <td>70</td>\n      <td>69</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>SO2</td>\n      <td>1.8</td>\n      <td>2</td>\n      <td>1.7</td>\n      <td>1.6</td>\n      <td>1.9</td>\n      <td>1.4</td>\n      <td>1.5</td>\n      <td>...</td>\n      <td>3.9</td>\n      <td>4.4</td>\n      <td>9.9</td>\n      <td>5.1</td>\n      <td>3.4</td>\n      <td>2.3</td>\n      <td>2</td>\n      <td>1.9</td>\n      <td>1.9</td>\n      <td>1.9</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>THC</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1.9</td>\n      <td>1.9</td>\n      <td>1.8</td>\n      <td>1.9</td>\n      <td>...</td>\n      <td>1.9</td>\n      <td>1.9</td>\n      <td>1.9</td>\n      <td>2.1</td>\n      <td>2</td>\n      <td>1.9</td>\n      <td>1.9</td>\n      <td>1.9</td>\n      <td>1.9</td>\n      <td>1.9</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>WD_HR</td>\n      <td>37</td>\n      <td>80</td>\n      <td>57</td>\n      <td>76</td>\n      <td>110</td>\n      <td>106</td>\n      <td>101</td>\n      <td>...</td>\n      <td>307</td>\n      <td>304</td>\n      <td>307</td>\n      <td>124</td>\n      <td>118</td>\n      <td>121</td>\n      <td>113</td>\n      <td>112</td>\n      <td>106</td>\n      <td>110</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>WIND_DIREC</td>\n      <td>35</td>\n      <td>79</td>\n      <td>2.4</td>\n      <td>55</td>\n      <td>94</td>\n      <td>116</td>\n      <td>106</td>\n      <td>...</td>\n      <td>313</td>\n      <td>305</td>\n      <td>291</td>\n      <td>124</td>\n      <td>119</td>\n      <td>118</td>\n      <td>114</td>\n      <td>108</td>\n      <td>102</td>\n      <td>111</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>WIND_SPEED</td>\n      <td>1.4</td>\n      <td>1.8</td>\n      <td>1</td>\n      <td>0.6</td>\n      <td>1.7</td>\n      <td>2.5</td>\n      <td>2.5</td>\n      <td>...</td>\n      <td>2.5</td>\n      <td>2.2</td>\n      <td>1.4</td>\n      <td>2.2</td>\n      <td>2.8</td>\n      <td>3</td>\n      <td>2.6</td>\n      <td>2.7</td>\n      <td>2.1</td>\n      <td>2.1</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>2014/1/1</td>\n      <td>豐原</td>\n      <td>WS_HR</td>\n      <td>0.5</td>\n      <td>0.9</td>\n      <td>0.6</td>\n      <td>0.3</td>\n      <td>0.6</td>\n      <td>1.9</td>\n      <td>2</td>\n      <td>...</td>\n      <td>2.1</td>\n      <td>2.1</td>\n      <td>1.9</td>\n      <td>1</td>\n      <td>2.5</td>\n      <td>2.5</td>\n      <td>2.8</td>\n      <td>2.6</td>\n      <td>2.4</td>\n      <td>2.3</td>\n    </tr>\n  </tbody>\n</table>\n<p>18 rows × 27 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 44
+     "execution_count": 2
     }
    ],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
       "text/plain": "(4320, 24)"
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 3
     }
    ],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
       "text/plain": "array([[ 23.  ,  23.  ,  23.  , ...,  13.  ,  13.  ,  13.  ],\n       [  1.6 ,   1.7 ,   1.7 , ...,   1.8 ,   1.8 ,   1.8 ],\n       [  0.22,   0.2 ,   0.18, ...,   0.51,   0.57,   0.56],\n       ...,\n       [ 93.  ,  50.  ,  99.  , ..., 118.  , 100.  , 105.  ],\n       [  1.8 ,   2.1 ,   3.2 , ...,   1.5 ,   2.  ,   2.  ],\n       [  1.3 ,   0.9 ,   1.  , ...,   1.6 ,   1.8 ,   2.  ]])"
      },
      "metadata": {},
-     "execution_count": 72
+     "execution_count": 6
     }
    ],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
       "text/plain": "((162,), (162,))"
      },
      "metadata": {},
-     "execution_count": 78
+     "execution_count": 8
     }
    ],
    "source": [
@@ -191,16 +191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(array([[-3.80191926, -3.80172898, -3.80098934, ..., -1.35805482,\n         -1.35915993, -2.6791547 ],\n        [-3.80191926, -3.80172898, -3.82626312, ..., -1.35805482,\n         -2.67575933, -2.85495044],\n        [-3.80191926, -3.82702726, -3.8515369 , ..., -2.67546148,\n         -2.85130591, -2.41546108],\n        ...,\n        [-3.72597039, -3.70053589, -3.67462047, ..., -2.14849882,\n         -1.88579969, -1.97597173],\n        [-3.70065411, -3.67523761, -3.69989424, ..., -1.88501748,\n         -1.97357298, -1.71227811],\n        [-3.67533782, -3.70053589, -3.72516802, ..., -1.97284459,\n         -1.7102531 , -1.53648237]]), (5652, 162))"
+      "text/plain": "array([[-1.35825331, -1.35883937, -1.359222  , ...,  0.26650729,\n         0.2656797 , -1.14082131],\n       [-1.35825331, -1.35883937, -1.51819928, ...,  0.26650729,\n        -1.13963133, -1.32832904],\n       [-1.35825331, -1.51789368, -1.67717656, ..., -1.13923451,\n        -1.32700613, -0.85955971],\n       ...,\n       [-0.88092053, -0.72262212, -0.56433559, ..., -0.57693779,\n        -0.29644471, -0.39079039],\n       [-0.7218096 , -0.56356781, -0.72331287, ..., -0.29578943,\n        -0.39013211, -0.1095288 ],\n       [-0.56269867, -0.72262212, -0.88229015, ..., -0.38950555,\n        -0.10906991,  0.07797893]])"
      },
      "metadata": {},
-     "execution_count": 82
+     "execution_count": 9
     }
    ],
    "source": [
@@ -212,13 +212,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Shuffle the set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "index = [i for i in range(len(x_data))]\n",
+    "random.shuffle(index)\n",
+    "x_data = x_data[index]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split Validation Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "x_train, y_train = x_data[:math.floor(len(x_data) * 0.8),:], y_data[:math.floor(len(x_data) * 0.8),:]\n",
+    "x_val, y_val = x_data[math.floor(len(x_data) * 0.8):,:], y_data[math.floor(len(x_data) * 0.8):,:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adagrad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "tags": [
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend"
+    ]
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "No.100 loss is 317789.39911053376\nNo.200 loss is 113778.16286938918\nNo.300 loss is 58422.67407566133\nNo.400 loss is 34747.065315552616\nNo.500 loss is 22386.362672656123\nNo.600 loss is 15138.24245595807\nNo.700 loss is 10573.734165545917\nNo.800 loss is 7564.170371096305\nNo.900 loss is 5516.2309618577\nNo.1000 loss is 4089.8506443231886\nNo.1100 loss is 3078.0947616085286\nNo.1200 loss is 2349.595916282807\nNo.1300 loss is 1818.313374246674\nNo.1400 loss is 1426.514842934186\nNo.1500 loss is 1134.6981629163583\nNo.1600 loss is 915.3890419206072\nNo.1700 loss is 749.2084235921003\nNo.1800 loss is 622.3182598547368\nNo.1900 loss is 524.729002703214\nNo.2000 loss is 449.1587054981753\nNo.2100 loss is 390.25233264655583\nNo.2200 loss is 344.0403786404491\nNo.2300 loss is 307.5589127111676\nNo.2400 loss is 278.58000836097665\nNo.2500 loss is 255.4185945381079\nNo.2600 loss is 236.79281534460966\nNo.2700 loss is 221.72224426895477\nNo.2800 loss is 209.453133680352\nNo.2900 loss is 199.40314139919678\nNo.3000 loss is 191.1202017543743\nNo.3100 loss is 184.25174414767795\nNo.3200 loss is 178.52153255027358\nNo.3300 loss is 173.7121526294403\nNo.3400 loss is 169.6517080317249\nNo.3500 loss is 166.20367022990973\nNo.3600 loss is 163.25910255538403\nNo.3700 loss is 160.73067972252753\nNo.3800 loss is 158.54807092244147\nNo.3900 loss is 156.65436255795453\nNo.4000 loss is 155.00327660167403\nNo.4100 loss is 153.5569999945755\nNo.4200 loss is 152.28448492205334\nNo.4300 loss is 151.16011314865358\nNo.4400 loss is 150.16264272626685\nNo.4500 loss is 149.27437440771413\nNo.4600 loss is 148.480489538299\nNo.4700 loss is 147.76852220011108\nNo.4800 loss is 147.1279367928359\nNo.4900 loss is 146.54978868101912\nNo.5000 loss is 146.02645049339074\n"
+    }
+   ],
+   "source": [
+    "iteration = 3000\n",
+    "learning_rate = 100\n",
+    "eps = 1e-7\n",
+    "rows = int(x_train.shape[0])\n",
+    "params = int(x_train.shape[1])\n",
+    "\n",
+    "w = np.matrix(np.zeros([params+1, 1]))\n",
+    "x = np.matrix(np.concatenate((np.ones([rows, 1]),x_train), axis = 1).astype(float))\n",
+    "y = np.matrix(y_train)\n",
+    "\n",
+    "adgrad = np.matrix(np.zeros([params+1, 1]))\n",
+    "for item in range(iteration):\n",
+    "    z = x * w - y\n",
+    "    loss = np.sum(np.power((x * w - y), 2)) / (rows * 2)\n",
+    "    gradient = x.T * (x * w - y) / rows\n",
+    "    adgrad += np.power(gradient, 2)\n",
+    "    w = w - np.multiply(learning_rate / (np.sqrt(adgrad) + eps) , gradient)\n",
+    "    if (item+1) % 100 == 0:\n",
+    "        print(f'No.{item+1} loss is {loss}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "### Split Validation Set"
-   ]
+   "source": []
   }
  ],
  "metadata": {
